# apriltag3_ros

./: README.md
apriltag3/: CMakeLists.txt  package.xml
apriltag3/include/apriltag3/: apriltag.h  apriltag_pose.h
apriltag3/include/apriltag3/common/: doubles.h  doubles_floats_impl.h  floats.h  image_u8.h  image_u8x3.h  image_u8x4.h  matd.h  math_util.h  pam.h  pjpeg.h  time_util.h  unionfind.h
apriltag3/src/: image_u8.c  image_u8x3.c  image_u8x4.c  pam.c  pjpeg-idct.c  pjpeg.c  tag16h5.c  tag25h9.c  tag36h11.c  workerpool.c
apriltag3_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
apriltag3_ros/config/: D435.json  D435_AUTO.json  disney_tags.yaml  old_tags.yaml  settings.yaml  tags.yaml  uc_tags.yaml
apriltag3_ros/include/apriltag3_ros/: common_functions.h  continuous_detector.h
apriltag3_ros/launch/: apriltag3_full.launch  continuous_detection.launch  launch_realsense_cam.launch  launch_uvc_cam.launch  launch_ximea.launch  launch_zed_cam.launch
apriltag3_ros/msg/: AprilTagDetection.msg
apriltag3_ros/src/: apriltag3_ros_continuous_node.cpp  common_functions.cpp  continuous_detector.cpp
