<?xml version="1.0"?>
<package>
  <name>apriltag3_ros</name>
  <version>0.0.1</version>
  <description>
    ROS wrapper of AprilTag 3.
  </description>

  <maintainer email="perseghetti@gmail.com">Benjamin Perseghetti</maintainer>
  <author email="perseghetti@gmail.com">Benjamin Persegehtti</author>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/apriltag3_ros</url>
  <url type="bugtracker">https://github.com/rudislabs/apriltag3_ros/issues</url>
  <url type="repository">https://github.com/rudislabs/apriltag3_ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltag3</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>apriltag3</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libopencv-dev</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
